force-app/main/default/objects/Student__c/fields/Additional_Support__c.field-meta.xml
<CustomField>
    <fullName>Additional_Support__c</fullName>
    <formula>IF( Number_of_Siblings__c  &gt; 5 , &quot;Needed&quot;, &quot;No Need&quot;)</formula>
    <label>Additional Support</label>
    <type>Text</type>
</CustomField>