force-app/main/default/objects/Student__c/fields/Amount_of_Discount__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Discount__c</fullName>
    <formula>Fee__c  *  Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount of Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>