force-app/main/default/objects/Student__c/fields/Appointment_Date__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Date__c</fullName>
    <formula>Enrolment_Date__c  + 7</formula>
    <label>Appointment Date</label>
    <type>Date</type>
</CustomField>