force-app/main/default/objects/Student__c/fields/Course_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Course_Start_Date__c</fullName>
    <formula>IF( ISNULL( Enrolment_Date__c )  , TODAY() ,  Enrolment_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Start Date</label>
    <type>Date</type>
</CustomField>