force-app/main/default/objects/Student__c/fields/Going_to_Join_Club__c.field-meta.xml
<CustomField>
    <fullName>Going_to_Join_Club__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Going to Join Club?</label>
    <type>Checkbox</type>
</CustomField>