force-app/main/default/objects/Student__c/fields/Library_ID__c.field-meta.xml
<CustomField>
    <fullName>Library_ID__c</fullName>
    <displayFormat>LIB-{0000}</displayFormat>
    <label>Library ID</label>
    <type>AutoNumber</type>
</CustomField>