force-app/main/default/objects/Student__c/fields/Number_of_Siblings__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Siblings__c</fullName>
    <label>Number of Siblings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>