force-app/main/default/objects/Student__c/fields/Office_Hour__c.field-meta.xml
<CustomField>
    <fullName>Office_Hour__c</fullName>
    <label>Office Hour</label>
    <type>DateTime</type>
</CustomField>