force-app/main/default/objects/Student__c/fields/Personel_Website__c.field-meta.xml
<CustomField>
    <fullName>Personel_Website__c</fullName>
    <label>Personel Website</label>
    <type>Url</type>
</CustomField>