force-app/main/default/objects/Student__c/fields/Student_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Student_Evaluation__c</fullName>
    <label>Student Evaluation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>