force-app/main/default/objects/Student__c/fields/Teachers__c.field-meta.xml
<CustomField>
    <fullName>Teachers__c</fullName>
    <label>Teachers</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Teaching_Area__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Teachers</valueSetName>
    </valueSet>
</CustomField>