force-app/main/default/objects/Student__c/fields/Teaching_Area__c.field-meta.xml
<CustomField>
    <fullName>Teaching_Area__c</fullName>
    <label>Teaching area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Math</fullName>
            </value>
            <value>
                <fullName>Biology</fullName>
            </value>
            <value>
                <fullName>Music</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>