force-app/main/default/objects/Student__c/fields/trip__c.field-meta.xml
<CustomField>
    <fullName>trip__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>trip</label>
    <referenceTo>trip__c</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <type>Lookup</type>
</CustomField>