force-app/main/default/objects/Student__c/fields/Which_club__c.field-meta.xml
<CustomField>
    <fullName>Which_club__c</fullName>
    <label>Which club?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Going_to_Join_Club__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Art</fullName>
            </value>
            <value>
                <fullName>Cooking</fullName>
            </value>
            <value>
                <fullName>Math</fullName>
            </value>
            <value>
                <fullName>Music</fullName>
            </value>
            <value>
                <fullName>Origami</fullName>
            </value>
            <value>
                <fullName>Robotics</fullName>
            </value>
            <value>
                <fullName>Science</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>