force-app/main/default/objects/Student__c/recordTypes/High_School_Students.recordType-meta.xml
<RecordType>
    <fullName>High_School_Students</fullName>
    <active>true</active>
    <label>High School Students</label>
</RecordType>