force-app/main/default/objects/Student__c/recordTypes/Middle_School_Student.recordType-meta.xml
<RecordType>
    <fullName>Middle_School_Student</fullName>
    <active>true</active>
    <label>Middle School Student</label>
</RecordType>