force-app/main/default/objects/Student__c/recordTypes/Primary_School_Student.recordType-meta.xml
<RecordType>
    <fullName>Primary_School_Student</fullName>
    <active>true</active>
    <label>Primary School Student</label>
</RecordType>