force-app/main/default/objects/Student__c/validationRules/Fee_cannot_be_decreased.validationRule-meta.xml
<ValidationRule>
    <fullName>Fee_cannot_be_decreased</fullName>
    <active>true</active>
    <errorConditionFormula>Fee__c  &lt;  PRIORVALUE( Fee__c )</errorConditionFormula>
    <errorDisplayField>Fee__c</errorDisplayField>
    <errorMessage>Fee cannot be decreased.</errorMessage>
</ValidationRule>