force-app/main/default/objects/Student__c/validationRules/Fee_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Fee_Check</fullName>
    <active>true</active>
    <description>Fee value cannot be less than $5000</description>
    <errorConditionFormula>Fee__c &lt; 5000</errorConditionFormula>
    <errorDisplayField>Fee__c</errorDisplayField>
    <errorMessage>Fee value cannot be less than $5000</errorMessage>
</ValidationRule>