force-app/main/default/objects/Student__c/listViews/Student_Queue_1_Student.listView-meta.xml
<ListView>
    <fullName>Student_Queue_1_Student</fullName>
    <filterScope>Queue</filterScope>
    <label>Student Queue #1</label>
    <queue>Student_Queue_1</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>