force-app/main/default/objects/Student__c/listViews/Student_Queue_Student.listView-meta.xml
<ListView>
    <fullName>Student_Queue_Student</fullName>
    <filterScope>Queue</filterScope>
    <label>Student Queue</label>
    <queue>Student_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>